--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,38 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Node.js
+node_modules/
+package-lock.json
+yarn.lock
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build outputs
+dist/
+build/
+coverage/
+
+# OS files
+.DS_Store
+
+# Testing
+*.test.js
+*.spec.js
+*.snap
+
+# Editor files
+*.swp
+*.swn
+*.tmp
+
+# Logs
+logs/
+
+# IDE
+.idea/
+.vscode/
