--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "bpmn-creator",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
-  "description": "",
-  "main": "main.js",
+  "description": "Modern BPMN Diagram Editor with AI Assistant",
+  "main": "main.py",
   "scripts": {
-    "start": "node server.js",
+    "start": "python main.py",
+    "dev": "uvicorn main:app --reload",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "bpmn",
+    "workflow",
+    "diagram",
+    "fastapi",
+    "ai"
+  ],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bpmn-moddle": "^9.0.4",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {},
+  "engines": {
+    "python": ">=3.13"
   }
 }
