--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.124.0",
+    "openai>=2.11.0",
     "uvicorn>=0.38.0",
+]
+
+[dependency-groups]
+dev = [
+    "dotenv>=0.9.9",
 ]
