migration to pydantic-settings
refactor: migrate to pydantic-settings and add MODEL_NAME configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENROUTER_API_KEY = your_ai_api_key
+MODEL_NAME = your_model_name
 
 YOUR_SITE_URL = your_site_url (Optional. Site URL for rankings on openrouter.ai.)
 YOUR_SITE_NAME = your_site_name (Optional. Site title for rankings on openrouter.ai.)
