--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "fastapi>=0.124.0",
-    "openai>=2.11.0",
-    "uvicorn>=0.38.0",
-]
+dependencies = ["fastapi>=0.124.0", "openai>=2.11.0", "uvicorn>=0.38.0"]
 
 [dependency-groups]
-dev = [
-    "dotenv>=0.9.9",
-    "pydantic-settings>=2.12.0",
-]
+dev = ["dotenv>=0.9.9", "pydantic-settings>=2.12.0", "ruff>=0.14.9"]
+
+[tool.ruff]
+exclude = ["build", "dist", ".venv", ".git", "*.ipynb"]
