--- a/.github/workflows/ruff_linter.yml
+++ b/.github/workflows/ruff_linter.yml
@@ -2,7 +2,7 @@ name: CI: Python Linting (Ruff)
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   lint:
@@ -21,6 +21,7 @@ jobs:
 
     - name: Ruff lint (SARIF)
       run: ruff check . --output-format sarif > ruff.sarif || true
+      continue-on-error: true
 
     - name: Upload Ruff SARIF
       uses: github/codeql-action/upload-sarif@v3
@@ -29,6 +30,5 @@ jobs:
 
     - name: Fail CI on Ruff issues
       run: |
-        ruff check .
-        ruff format --check .
+        ruff check . && ruff format --check .
 
