--- a/.github/workflows/cd-docker-push.yml
+++ b/.github/workflows/cd-docker-push.yml
@@ -6,7 +6,8 @@ on:
 
 env:
   IMAGE_NAME: vibe-bpmn
-  REGISTRY: ghcr.io
+  REGISTRY: docker.io 
+  DOCKERHUB_USERNAME: pigstep 
 
 jobs:
   build:
@@ -18,27 +19,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GHCR
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Generate tags
-        id: meta
-        run: |
-          SHORT_SHA=${GITHUB_SHA::7}
-          echo "latest=latest" >> $GITHUB_OUTPUT
-          echo "sha=sha-${SHORT_SHA}" >> $GITHUB_OUTPUT
-
-      - name: Build & push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.latest }}
-            ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.sha }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
