--- a/.github/workflows/ci-docker-build.yml
+++ b/.github/workflows/ci-docker-build.yml
@@ -6,7 +6,8 @@ on:
 
 env:
   IMAGE_NAME: vibe-bpmn
-  REGISTRY: ghcr.io
+  REGISTRY: docker.io
+  DOCKERHUB_USERNAME: pigstep
 
 jobs:
   build:
@@ -18,12 +19,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build (no push)
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}:ci
+            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:ci-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
