update ci-cd workflow logic

--- a/.github/workflows/cd-docker-push.yml
+++ b/.github/workflows/cd-docker-push.yml
@@ -1,7 +1,8 @@
 name: CD - build & push image
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches: [ "main" ]
 
 env:
@@ -11,6 +12,7 @@ env:
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
