--- a/.github/workflows/ci-docker-build.yml
+++ b/.github/workflows/ci-docker-build.yml
@@ -6,8 +6,6 @@ on:
 
 env:
   IMAGE_NAME: vibe-bpmn
-  REGISTRY: docker.io
-  DOCKERHUB_USERNAME: pigstep
 
 jobs:
   build:
@@ -19,19 +17,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
+      - name: Build without push (CI check)
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          push: false
           tags: |
-            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:ci-{{ github.sha [0:7]}
-            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:ci-latest
+            local-build:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
