--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-OPENROUTER_API_KEY = your_ai_api_key
-MODEL_NAME = your_model_name
+OPENROUTER_API_KEY = your_ai_api_key  # API key for OpenRouter
+MODEL_NAME = your_model_name          # Name of the model to use
 
-YOUR_SITE_URL = your_site_url (Optional. Site URL for rankings on openrouter.ai.)
-YOUR_SITE_NAME = your_site_name (Optional. Site title for rankings on openrouter.ai.)
+SITE_NAME = your_site_name      # Optional: site title for ranking at openrouter.ai
+
+BASE_URL = http://127.0.0.1:8000/ 
+API_URL = http://127.0.0.1:8000/api/
