--- a/.github/workflows/cd-render-push.yml
+++ b/.github/workflows/cd-render-push.yml
@@ -8,10 +8,12 @@ permissions:
 on:
   workflow_run:
     workflows: ["CD - build & push image"]
-    branches: [main] 
+    branches:
+      - main
     types:
       - completed
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
+
 jobs:
   deploy-render:
       if: ${{ github.event.workflow_run.conclusion == 'success' }}
