FINAL (please) fixes with deploy
deal with problem of SECRETS keys and automatic CD RENDER deploy

--- a/.github/workflows/cd-render-push.yml
+++ b/.github/workflows/cd-render-push.yml
@@ -24,4 +24,4 @@ jobs:
           
       - name: Trigger Render Deployment
         run: |
-          curl -f -X POST "${{ secrets.RENDER_DEPLOY_HOOK_URL }}"
+          curl -f -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
