--- a/.github/workflows/cd-docker-push.yml
+++ b/.github/workflows/cd-docker-push.yml
@@ -1,6 +1,8 @@
 name: CD - build & push docker image
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     types: [closed]
     branches: [ "main" ]
