--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,13 @@ dev = [
     "dotenv>=0.9.9",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
+    "pytest-mock>=3.15.1",
     "ruff>=0.14.9",
 ]
 
 [tool.ruff]
 exclude = ["build", "dist", ".venv", ".git", "*.ipynb"]
+
+[tool.pytest.ini_options]
+pythonpath = "."
+testpaths = ["tests"]
