--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,13 @@ dev = [
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
     "pytest-mock>=3.15.1",
+    "pytest-cov>=6.0.0",
     "ruff>=0.14.9",
+]
+test = [
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
 ]
 
 [tool.ruff]
