--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run pytest with coverage
         run: |
-          pytest --cov=src --cov-report=term-missing --cov-report=html -v
+          .venv/bin/python -m pytest pytest --cov=src --cov-report=term-missing --cov-report=html -v
 
       - name: Upload coverage report
         if: always()
