--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install uv
-          uv sync --only-group test
+          uv sync --no-dev
 
       - name: Run pytest with coverage
         run: |
