fix: add test enviroment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+ENVIROMENT = prod | test | dev
 OPENROUTER_API_KEY = your_ai_api_key  # API key for OpenRouter
 MODEL_NAME = your_model_name          # Name of the model to use
 
