--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Run pytest with coverage
         run: |
           .venv/bin/python -m pytest --cov=src --cov-report=term-missing --cov-report=html -v
+        ENVIROMENT:
+          ENV: test
 
       - name: Upload coverage report
         if: always()
