--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ dev = [
     "dotenv>=0.9.9",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=0.24.0",
     "pytest-mock>=3.15.1",
     "pytest-cov>=6.0.0",
+    "httpx>=0.28.0",
     "ruff>=0.14.9",
 ]
 
